# lensdrop-ios

./: .gitignore  .gitmodules  CMakeLists.txt  PRIVACY.md  README.md  README.zh-CN.md  project.yml
CimbarApp.xcodeproj/: project.pbxproj
core/: cimbar_c.cpp  cimbar_c.h
doc/: CIMBAR_IOS_PLAN.md
ios/: CameraPreview.swift  CimbarApp-Info.plist  CimbarApp.swift  CimbarSession.swift  FileListView.swift  Localization.swift  PrivacyPolicyView.swift  ScanView.swift  SettingsView.swift
ios/Bridge/: CimbarApp-Bridging-Header.h  CimbarDecoderBridge.h  CimbarDecoderBridge.mm
ios/Resources/Sender/: cimbar_js.html
ios/en.lproj/: InfoPlist.strings  Localizable.strings
ios/zh-Hans.lproj/: InfoPlist.strings  Localizable.strings
scripts/: build-libcimbar.sh  generate-xcode.sh
